kubernetes/rook-ceph/cluster/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/external: "true"
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: kube-system
  hostnames:
    - rook.eviljungle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard-internal
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
  hostnames:
    - rook.eviljungle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
